# PokerPete

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/scripts/: build_preflop_equity_matrix.py
backend/src/pokerpete/: __init__.py  main.py
backend/src/pokerpete/api/: routes_equity.py  routes_range_predictor.py  routes_ranges.py  routes_solver.py  routes_trainer.py
backend/src/pokerpete/core/: config.py
backend/src/pokerpete/db/: models.py  saved_ranges.py  session.py  solver_cache.py
backend/src/pokerpete/db/migrations/: env.py
backend/src/pokerpete/db/migrations/versions/: 8c663adeae1f_add_solver_results_cache_table.py  9652888dc06a_add_ranges_table.py  d2959045698e_initial_empty_schema.py
backend/src/pokerpete/engine/: cards.py  equity.py  evaluator.py  preflop_equity_matrix.py  preflop_solver.py  preflop_tree_solver.py  range_predictor.py  ranges.py  trainer.py
backend/src/pokerpete/engine/data/: bet_sizing_skew.py  player_type_modifiers.py  preflop_equity_matrix.json  range_predictor_baselines.py
backend/src/pokerpete/schemas/: equity.py  range_predictor.py  ranges.py  solver.py  trainer.py
backend/tests/api/: test_health.py  test_routes_equity.py  test_routes_range_predictor.py  test_routes_ranges.py  test_routes_solver.py  test_routes_trainer.py
backend/tests/db/: test_solver_cache.py
backend/tests/engine/: test_cards.py  test_equity.py  test_evaluator.py  test_preflop_solver.py  test_preflop_tree_solver.py  test_range_predictor.py  test_ranges.py  test_trainer.py
docs/: architecture.md
frontend/: index.html  (+2 more)
(+14 files in other folders)
