[project]
name = "pokerpete"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jimmy Zhen", email = "jzen5573@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "eval7>=0.1.10",
    "fastapi>=0.139.2",
    "numpy>=2.5.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/pokerpete/db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]
